--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,12 +3,64 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="https://ui-avatars.com/api/?name=g+p&rounded=true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>iGP Auth</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body>
-  <h1>Hello world</h1>
+<body class="bg-gray-100 py-16">
+
+  <div class="max-w-2xl mx-auto px-4 py-8 bg-white shadow rounded-lg">
+
+    <div class="text-center mb-8">
+      <h2 class="text-2xl font-semibold mb-4">Confirm Your Email</h2>
+      <p class="text-gray-700">To complete the registration process, please verify your email address by clicking the
+        button below.</p>
+    </div>
+
+    <div class="text-center mb-6">
+      <a href="#" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-full shadow">
+        Confirm Email Address
+      </a>
+    </div>
+
+    <div class="mb-6">
+      <h3 class="font-semibold mb-4 text-center">Your Notifications</h3>
+      <ul class="space-y-2">
+        <li class="cursor-pointer rounded">
+          <div
+            class="flex items-center p-4 text-sm text-gray-800 border border-gray-300 rounded-lg bg-gray-50 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600"
+            role="alert">
+            <svg class="flex-shrink-0 inline w-4 h-4 mr-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor" viewBox="0 0 20 20">
+              <path
+                d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+              <span class="font-medium">Notification title</span> Notification body
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="text-center">
+      <button class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold py-2 px-4 rounded-full shadow"
+        id="notify-me-button">
+        Notify Me
+      </button>
+    </div>
+
+  </div>
+
+
+  <script>
+    const baseURL = window.location.origin;
+
+    console.log('baseURL', baseURL)
+  </script>
 </body>
 
 </html>
